--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,4 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['JDA.jar'])
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+project.buildDir = 'C:\\Users\\Aaron\\Desktop\\creditBot'
