--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ jar {
     }
 }
 dependencies {
+    compile group: 'org.json', name: 'json', version: '20190722'
     compile 'com.google.api-client:google-api-client:1.30.4'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.30.4'
     compile 'com.google.apis:google-api-services-sheets:v4-rev581-1.25.0'
